main area photo section fixed on mobile view

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,13 +1,19 @@
 @import './_variables.scss';
 
 main {
+  .container {
+    @media screen and (max-width: $mobile) {
+      max-width: 100vw;
+      margin-left: unset;
+      margin-right: unset;
+    }
+  }
   position: relative;
   padding: 10rem 0 0;
   color: #fff;
   background-color: $dark-violet;
 
   @media screen and (max-width: $mobile) {
-    // margin-top: 10rem;
     background-color: white;
     padding: 0;
   }
@@ -57,7 +63,7 @@ main {
 
   @media screen and (max-width: $mobile) {
     flex-direction: column-reverse;
-    margin-top: 30rem;
+    margin-top: 27rem;
   }
 
   .main-left,
@@ -67,9 +73,13 @@ main {
   }
 
   .main-right {
-    @media screen and (max-width: $mobile) {
-      margin-left: auto;
-      marign-right: auto;
+    img {
+      @media screen and (max-width: $mobile) {
+        width: 100vw;
+        // margin-left: auto;
+        // marign-right: auto;
+        // display: none;
+      }
     }
   }
 
