--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -218,6 +218,14 @@ main {
 }
 
 @media screen and (max-width: 425px) {
+  main .container {
+    max-width: 100vw;
+    margin-left: unset;
+    margin-right: unset;
+  }
+}
+
+@media screen and (max-width: 425px) {
   main {
     background-color: white;
     padding: 0;
@@ -270,7 +278,7 @@ main::after {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
-    margin-top: 30rem;
+    margin-top: 27rem;
   }
 }
 
@@ -281,9 +289,8 @@ main::after {
 }
 
 @media screen and (max-width: 425px) {
-  .main-container .main-right {
-    margin-left: auto;
-    marign-right: auto;
+  .main-container .main-right img {
+    width: 100vw;
   }
 }
 
